Modified index.html page and upload team members images.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row gy-4">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center" data-aos="zoom-out">
             <h1>Better Solutions For Your Business</h1>
-            <p>We are team of talented designers making websites with Bootstrap</p>
+            <p>We are team of talented designers & developers making websites, advertising for your businesss </p>
             <div class="d-flex">
               <a href="#about" class="btn-get-started">Get Started</a>
               <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
@@ -160,18 +160,18 @@
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Empowering Your Business with Digital Excellence
+At Softwave Solutions, we provide top-tier digital services to help businesses thrive in the modern world. Our expertise ensures seamless online presence and impactful brand engagement.
             </p>
             <ul>
-              <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check2-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo</span></li>
+              <li><i class="bi bi-check2-circle"></i> <span>Custom Website Development – Responsive, fast, and user-friendly websites tailored to your needs.</span></li>
+              <li><i class="bi bi-check2-circle"></i> <span>Social Media Management – Strategic content and engagement to grow your audience.</span></li>
+              <li><i class="bi bi-check2-circle"></i> <span> Effective Advertising Solutions – Data-driven marketing campaigns for maximum reach and conversions.</span></li>
             </ul>
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+            <p>Softwave Solutions is a cutting-edge software development company specializing in website design, social media management, advertising, and digital solutions for businesses of all sizes. Our expert team is dedicated to delivering high-quality, user-friendly, and innovative technology that helps businesses grow in the digital world. Whether you need a custom website, strategic social media management, or effective advertising solutions, we turn your ideas into reality. </p>
             <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
@@ -196,7 +196,7 @@
 
             <h3>Voluptatem dignissimos provident quasi corporis voluptas</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              At Softwave Solutions, we use modern technologies to build high-performance solutions. Our web development stack includes HTML, CSS, JavaScript, React, WordPress, and PHP, while back-end systems are powered by Node.js, Express.js, MySQL, and MongoDB. For design, we use Figma, Photoshop, and Illustrator, and our digital marketing expertise covers SEO, Facebook Ads, Google Ads, and social media management to enhance online presence.
             </p>
 
             <div class="skills-content skills-animation">
@@ -244,7 +244,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>At Softwave Solutions, we provide expert services in website development, social media management, advertising, and digital marketing to help businesses grow and succeed online.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -254,32 +254,32 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-activity icon"></i></div>
-              <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="" class="stretched-link">Web Development</a></h4>
+              <p>Building responsive, fast, and user-friendly websites.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-bounding-box-circles icon"></i></div>
-              <h4><a href="" class="stretched-link">Sed ut perspici</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="" class="stretched-link">Social Media Management</a></h4>
+              <p>Enhancing online presence with strategic content and engagement.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
-              <h4><a href="" class="stretched-link">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="" class="stretched-link">Design</a></h4>
+              <p>Creating visually appealing graphics and UI/UX designs.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-broadcast icon"></i></div>
-              <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="" class="stretched-link">Advertising</a></h4>
+              <p>Driving brand growth with targeted digital marketing campaigns.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -299,7 +299,8 @@
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-xl-9 text-center text-xl-start">
             <h3>Call To Action</h3>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Ready to Elevate Your Business?  <br>
+              Partner with Softwave Solutions to transform your online presence with expert web development, social media management, and digital marketing. Let’s bring your vision to life get in touch today!</p>
           </div>
           <div class="col-xl-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
@@ -317,7 +318,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Meet the talented team at Softwave Solutions, committed to creating exceptional digital experiences through collaboration and expertise.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -326,7 +327,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/olitha_img.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Olitha Samaraweera</h4>
                 <span>Chief Executive Officer</span>
@@ -343,7 +344,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/nimshan_img.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Nimshan Munasinghe</h4>
                 <span>Product Manager</span>
@@ -360,7 +361,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/yuthika_img.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Yuthika Jathunarachchi</h4>
                 <span>CTO</span>
@@ -377,7 +378,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/dulaj_img.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Dulaj Gunawardhana</h4>
                 <span>Accountant</span>
@@ -614,7 +615,6 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
 
