--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Softwave Solution</title>
+  <title>NexaWeb IT Solution</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -44,6 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
+         <img src="" alt="">
         <h1 class="sitename">NexaWeb IT Solution</h1>
       </a>
 
@@ -194,7 +195,7 @@ At Softwave Solutions, we provide top-tier digital services to help businesses t
 
           <div class="col-lg-6 pt-4 pt-lg-0 content">
 
-            <h3>Voluptatem dignissimos provident quasi corporis voluptas</h3>
+            <h3>Technologies Powering Our Solutions</h3>
             <p class="fst-italic">
               At Softwave Solutions, we use modern technologies to build high-performance solutions. Our web development stack includes HTML, CSS, JavaScript, React, WordPress, and PHP, while back-end systems are powered by Node.js, Express.js, MySQL, and MongoDB. For design, we use Figma, Photoshop, and Illustrator, and our digital marketing expertise covers SEO, Facebook Ads, Google Ads, and social media management to enhance online presence.
             </p>
@@ -270,7 +271,7 @@ At Softwave Solutions, we provide top-tier digital services to help businesses t
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
-              <h4><a href="" class="stretched-link">Design</a></h4>
+              <h4><a href="" class="stretched-link">Designing</a></h4>
               <p>Creating visually appealing graphics and UI/UX designs.</p>
             </div>
           </div><!-- End Service Item -->
@@ -472,7 +473,7 @@ At Softwave Solutions, we provide top-tier digital services to help businesses t
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Have a project in mind or need support? Reach out to NexaWeb — we're here to help you grow online.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -486,7 +487,7 @@ At Softwave Solutions, we provide top-tier digital services to help businesses t
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>103/A Radawana Road, Pepiliyawala</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -494,7 +495,7 @@ At Softwave Solutions, we provide top-tier digital services to help businesses t
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>+94 71 276 5590</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -502,11 +503,11 @@ At Softwave Solutions, we provide top-tier digital services to help businesses t
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <p>info@nexaweb.com</p>
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37572.899405367716!2d79.991713549909!3d7.081464785430847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2fb67a22e72d9%3A0x913a2c56a49c8d8e!2sGampaha!5e1!3m2!1sen!2slk!4v1744118344317!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
@@ -567,10 +568,10 @@ At Softwave Solutions, we provide top-tier digital services to help businesses t
             <span class="sitename">Arsha</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>103/A Radawana Road,</p>
+            <p>Pepiliyawala</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+94 71 276 5590</span></p>
+            <p><strong>Email:</strong> <span>info@nexaweb.com</span></p>
           </div>
         </div>
 
@@ -587,16 +588,16 @@ At Softwave Solutions, we provide top-tier digital services to help businesses t
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Social Media Management</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Designing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Advertising</a></li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-12">
           <h4>Follow Us</h4>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+          <p>Stay connected and follow NexaWeb on social media for the latest updates, tips, and projects.</p>
           <div class="social-links d-flex">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
