Did changes in images.

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ At Softwave Solutions, we provide top-tier digital services to help businesses t
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Softwave Solution</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">NexaWeb IT Solution</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
