--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/nexaLogo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -328,7 +328,7 @@ At Softwave Solutions, we provide top-tier digital services to help businesses t
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/olitha_img.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/olitha222.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Olitha Samaraweera</h4>
                 <span>Chief Executive Officer</span>
