--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@ At NexaWeb IT Solution, we provide top-tier digital services to help businesses 
         <div class="row">
 
           <div class="col-lg-6 d-flex align-items-center">
-            <img src="assets/img/skills.png" class="img-fluid" alt="">
+            <!-- <img src="assets/img/skills.png" class="img-fluid" alt=""> -->
+             <video src="assets/videos/Untitled video - Made with Clipchamp.mp4" class="nexa-video" autoplay loop muted type="video/mp4"></video>
           </div>
 
           <div class="col-lg-6 pt-4 pt-lg-0 content">
@@ -635,5 +636,14 @@ At NexaWeb IT Solution, we provide top-tier digital services to help businesses 
   <script src="assets/js/main.js"></script>
 
 </body>
+
+<style>
+.nexa-video {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+</style>
 
 </html>
