--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="assets/img/clients/aws.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/node.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/Laravel-Logo.wine.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/vue_js.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/mysql_logo.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/Spring 400x125.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/ps.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/pr.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/java_logo.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/react-logo-removebg-preview.png" class="img-fluid" alt=""></div>
           </div>
         </div>
 
